After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774086 - [PATCH] fix g_main_context_check declaration
[PATCH] fix g_main_context_check declaration
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
2.51.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-11-08 02:13 UTC by Mohammed Sadiq
Modified: 2016-11-09 16:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gmain: fix g_main_context_check declaration (1.26 KB, patch)
2016-11-08 02:13 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2016-11-08 02:13:30 UTC
Created attachment 339299 [details] [review]
gmain: fix g_main_context_check declaration

g_main_context_check is defined as a function returning gboolean.
It should be declared as such.
Comment 1 Colin Walters 2016-11-09 15:37:45 UTC
Review of attachment 339299 [details] [review]:

LGTM.  Shouldn't be an API/ABI issue since it's just a typedef.

With things like this I usually prefer to know - *why* are you
changing this?  Did you just happen to be reading the code?
Did some static analysis tool flag it?
Comment 2 Colin Walters 2016-11-09 15:39:48 UTC
Attachment 339299 [details] pushed as 4607bd3 - gmain: fix g_main_context_check declaration
Comment 3 Mohammed Sadiq 2016-11-09 16:13:44 UTC
(In reply to Colin Walters from comment #1)
> With things like this I usually prefer to know - *why* are you
> changing this?  Did you just happen to be reading the code?
> Did some static analysis tool flag it?

I was trying to typedef gboolean as _Bool (the true boolean), which is present in c99+. Anyway, it isn't as easy as I did anticipate, and surely it will break ABI.